--- a/index.hbs
+++ b/index.hbs
@@ -1,20 +1,174 @@
 {{!< default}}
-<div class="gh-page">
-    <div class="gh-container">
 
-        <div class="gh-postfeed">
-        {{#foreach posts}}
-
-            {{> "card" page=../pagination.page }} {{!-- partials/card.hbs --}}
-
-        {{/foreach}}
+{{!--
+<section class="section--with-grid section--with-subcontent section--wide-content section--intro">
+  <div class="section-heading">
+    <h1 class="low-top">Peace! I'm Farai</h1>
+  </div>
+  <div class="section-content">
+    <p class="intro-blurb">
+      I <a href="#courses">teach</a>, <a href="#speaking">speak</a>, and am
+      <a href="/book">writing a book</a>, about High Impact 1:1 meetings.
+    </p>
+    {{> subscribe-form}}
+  </div>
+</section>
+--}}
+<section
+  id="courses"
+  class="grid [grid-template-areas:'header_header''content_content'] md:[grid-template-areas:'header_header''._content'] grid-cols-1 md:grid-cols-[1fr_minmax(500px,_700px)] col-start-1 col-end-4 sm:col-start-2 sm:col-end-4 md:col-start-2 md:col-end-3 mb-[5vh] mt-[6.5vh]"
+>
+  <h2 class="section-heading">Practical Courses &amp; Workshops</h2>
+  <div class="section-content">
+    <div class="course-list">
+      <div class="course-list-item">
+        <h3>High Impact 1:1 Essentials for Everyone</h3>
+        <h4>90 Minutes. Online.</h4>
+        <p>
+          I work with new and emerging leaders around the world to increase their people leadership
+          skillset and develop effective, inclusive practices that make them better at handling the
+          responsibility of looking after people's careers.
+        </p>
+        <h4 class="course-price">
+          <span class="crossed-out course-price--reduced">USD $159</span> USD $99
+        </h4>
+        <div class="course-cta-wrapper">
+          <a class="link--button" href="/high-impact-1-1-essentials">Learn about 1:1 essentials</a>
         </div>
-
-        {{!-- If JS isn't enabled, fallback to standard pagination --}}
-        <noscript>
-            <div class="gh-pagination">
-                {{pagination}}
-            </div>
-        </noscript>
+      </div>
     </div>
-</div>
+  </div>
+</section>
+<section
+  id="articles"
+  class="grid [grid-template-areas:'header_header''content_content'] md:[grid-template-areas:'header_header''._content'] grid-cols-1 md:grid-cols-[1fr_minmax(500px,_700px)] col-start-1 col-end-4 sm:col-start-2 sm:col-end-4 md:col-start-2 md:col-end-3 mb-[5vh] mt-[6.5vh]"
+>
+  <h2 class="section-heading">Articles</h2>
+  <div class="section-content">
+    {{#get "posts" filter="tag:-newsletter" limit="all" as |articles|}}
+    {{> "article-list"}}
+    {{/get}}
+  </div>
+</section>
+
+<section
+  id="coaching"
+  class="grid [grid-template-areas:'header_header''content_content'] md:[grid-template-areas:'header_header''._content'] grid-cols-1 md:grid-cols-[1fr_minmax(500px,_700px)] col-start-1 col-end-4 sm:col-start-2 sm:col-end-4 md:col-start-2 md:col-end-3 mb-[5vh] mt-[6.5vh]"
+>
+  <h2 class="section-heading">Coaching</h2>
+  <div class="section-content">
+    <p>
+      I work with new and emerging leaders around the world to increase their people leadership
+      skillset and develop effective, inclusive practices that make them better at handling the
+      responsibility of looking after people's careers.
+      <a href="/coaching">Not sure if you're ready for coaching?</a>
+    </p>
+    <br />
+    {{> "btn-calendly" }}
+  </div>
+</section>
+<section
+  id="speaking"
+  class="grid [grid-template-areas:'header_header''content_content'] md:[grid-template-areas:'header_header''._content'] grid-cols-1 md:grid-cols-[1fr_minmax(500px,_700px)] col-start-1 col-end-4 sm:col-start-2 sm:col-end-4 md:col-start-2 md:col-end-3 mb-[5vh] mt-[6.5vh]"
+>
+  <h2 class="section-heading">Speaking</h2>
+  <div class="section-content">
+    <p>
+      I speak around the world and online. These days I'm focussed on talking about
+      <strong>having effective 1:1 conversations between managers and team members</strong>. If
+      you’d like me to speak at a public or private event, catch me on
+      <strong>farai (at) hey.com</strong>.
+    </p>
+    <br />
+    <div>
+      <h3>
+        Video of my talk at
+        <a href="https://2019.leadingdesignconf.com/newyork">Leading Design 2019 (New York) </a>
+      </h3>
+      <br />
+      <div style="padding: 56.25% 0 0 0; position: relative">
+        <iframe
+          title="talk-video"
+          src="https://player.vimeo.com/video/350720470?title=0&byline=0&portrait=0"
+          style="position: absolute; top: 0; left: 0; width: 100%; height: 100%"
+          frameborder="0"
+          webkitallowfullscreen="webkitallowfullscreen"
+          mozallowfullscreen="mozallowfullscreen"
+          allowfullscreen="allowfullscreen"
+        ></iframe>
+      </div>
+      <script src="https://player.vimeo.com/api/player.js"></script>
+      <!-- <div class="video"> <div class="fluid-width-video-wrapper" style="padding-top: 56.25%;"><iframe title="talk-video"
+              src="https://www.youtube.com/embed/IWS9K_rxmOY?rel=0" frameborder="0" allowfullscreen="" allow="autoplay;
+              encrypted-media"></iframe></div> </div> -->
+      <br />
+    </div>
+    <div>
+      <h4>2023</h4>
+      <ul class="item-appearance-list">
+        <li class="item-appearance">
+          <a href="https://leadingdesign.com/conferences/sanfran-2023/speakers/farai-madzima"
+            >Leading Design 2023 - San Francisco</a
+          >
+          <br />
+          <span>What to say in 1:1 meetings </span>
+          <br />
+          <p class="caption">
+            <time>February 7, 2023</time>
+            — San Francisco, USA
+          </p>
+        </li>
+
+        <li class="item-appearance">
+          <a href="https://www.theiaconference.com/sessions/2023-keynote-farai-madzima/"
+            >IA Conference</a
+          >
+          <br />
+          <span>Deep care doesn't scale. It happens 1:1. </span>
+          <br />
+          <p class="caption">
+            <time>March 28, 2023</time>
+            — New Orleans, USA
+          </p>
+        </li>
+      </ul>
+      <h4>2022</h4>
+      <ul class="item-appearance-list">
+        <li class="item-appearance">
+          <a href="https://canux.io/farai-madzima/">CanUX</a>
+          <br />
+          <span>The Only One of Your Kind in the Room: Perils and Opportunities </span>
+          <br />
+          <p class="caption">
+            <time>November 15, 2022</time>
+            — Ottawa, Canada
+          </p>
+        </li>
+
+        <li class="item-appearance">
+          <a href="https://amuseconf.com/speaker/farai-madzima">Amuse UX</a>
+          <br />
+          <span>Designing your 1:1 </span>
+          <br />
+          <p class="caption">
+            <time>October 6, 2022</time>
+            — Budapest, Hungary
+          </p>
+        </li>
+
+        <li class="item-appearance">
+          <a href="https://www.mindtheproduct.com/mtpcon/san-francisco/speakers/"
+            >Mind the Product</a
+          >
+          <br />
+          <span>Working with strangers, well </span>
+          <br />
+          <p class="caption">
+            <time>May 24, 2022</time>
+            — San Francisco / Online
+          </p>
+        </li>
+      </ul>
+    </div>
+  </div>
+</section>
